<resources>
    <!-- TODO: support more than one language -->
    <string name="app_name">Proto</string>
    <string name="action_settings">Settings</string>

    <string name="feed_fragment_label">Feed</string>
    <string name="post_details_fragment_label">Post</string>
    <string name="add_post_fragment_label">New Post</string>
    <string name="edit_post_fragment_label">Edit Post</string>

    <string name="post_title_hint">Enter title</string>
    <string name="post_body_hint">What\'s up?</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_submit">Submit</string>
</resources>