<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="com.example.proto.ui.FeedFragment"
        android:label="@string/feed_fragment_label"
        tools:layout="@layout/fragment_feed">

        <argument
            android:name="user"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/toPostDetails"
            app:destination="@id/postDetailsFragment" />
        <action
            android:id="@+id/toAddOrEditPost"
            app:destination="@id/addOrEditPostFragment" />
        <action
            android:id="@+id/toUserFeed"
            app:destination="@id/feedFragment"/>
    </fragment>
    <fragment
        android:id="@+id/postDetailsFragment"
        android:name="com.example.proto.ui.PostDetailsFragment"
        android:label="@string/post_details_fragment_label"
        tools:layout="@layout/fragment_post_details">

        <argument
            android:name="post"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/toAddOrEditPost"
            app:destination="@id/addOrEditPostFragment" />
    </fragment>
    <fragment
        android:id="@+id/addOrEditPostFragment"
        android:name="com.example.proto.ui.AddOrEditPostFragment"
        android:label="@string/add_post_fragment_label"
        tools:layout="@layout/fragment_add_or_edit_post">
        <argument
            android:name="post"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
</navigation>